crates/formatter/tests/snapshots/snapshots__fixtures__000439_ai_seat_state.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into ai_seat_state (
	user_id,
	first_used_at,
	last_used_at,
	last_event_type,
	last_event_description,
	updated_at
)
values
	(
		'30095c71-380b-457a-8995-97b8ee6e5307',
		now(),
		now(),
		'task'::ai_seat_usage_reason,
		'Used for AI task',
		now()
	);
