crates/formatter/tests/snapshots/snapshots__fixtures__000442_aibridge_model_thoughts.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into aibridge_model_thoughts (
	interception_id,
	content,
	metadata,
	created_at
)
values
	(
		'be003e1e-b38f-43bf-847d-928074dd0aa8', -- from 000370_aibridge.up.sql
		'The user is asking about their workspaces. I should use the coder_list_workspaces tool to retrieve this information.',
		'{"source": "commentary"}',
		'2025-09-15 12:45:19.123456+00'
	);
