crates/formatter/tests/snapshots/snapshots__fixtures__000459_provider_key_policy.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into user_chat_provider_keys (
	user_id,
	chat_provider_id,
	api_key,
	created_at,
	updated_at
)
select
	id,
	'0a8b2f84-b5a8-4c44-8c9f-e58c44a534a7',
	'fixture-test-key',
	'2025-01-01 00:00:00+00',
	'2025-01-01 00:00:00+00'
from users
order by created_at, id
limit 1;
