crates/formatter/tests/snapshots/snapshots__fixtures__000473_mcp_server_allow_in_plan_mode.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Migration 473 adds allow_in_plan_mode with a default of false.
-- Flip the existing fixture row to true here so fixture data exercises
-- the non-default state only after the column exists.
update mcp_server_configs
set allow_in_plan_mode = true
where id = 'a1b2c3d4-e5f6-7890-abcd-ef1234567890';
